chore(styles): wrap btp and ptb in grid like portfolio section, trim and fix some outdated styling

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -8,13 +8,6 @@
   --dark2: #191b24;
   --light: #fff;
   --light2: #d8d8da;
-  font-size: 87.5%;
-}
-/* scaling base font to 14px for tiny, ancient phones */
-@media (min-width: 322px) {
-  :root {
-    font-size: 100%;
-  }
 }
 
 /* text selection styles */
